# lastfm-last-played

./: CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  docker-compose.yml
.github/: FUNDING.yml
.github/workflows/: deploy-api.yml  test-api.yml
api/: .gitignore  Dockerfile  Makefile  Pipfile  pylint.conf  pyproject.toml
api/app/: main.py
api/app/healthcheck/: blueprint.py  healthcheck.py
api/app/songs/: blueprint.py  latest_songs.py  test_latest_songs.py
api/tests/integration/: conftest.py
api/tests/integration/songs/: test_latest_songs.py
api/tests/unit/: conftest.py
api/tests/unit/healthcheck/: test_healthcheck.py
api/tests/unit/songs/: test_latest_songs.py
examples/: example1.html  example2.html  index.html
